# kunqu

./: .gitignore  README.md  kunqu-pipeline-plan.md  pyproject.toml  xunmeng_SOFAevaluation_demucs_roformer.ipynb
SOFA/: binarize.py  requirements.txt
asr/: CLAUDE.md  pyproject.toml
asr/aligned/: xunmeng.aligned.json  xunmeng.aligned_pinyin.json  xunmeng.srt  xunmeng_vocals.aligned_chunked.json  xunmeng_vocals.aligned_chunked.srt  xunmeng_vocals.aligned_chunked_pinyin.json  xunmeng_vocals.aligned_chunked_pinyin.srt
asr/jobs/: align_vocals.sh  align_vocals2.sh  align_vocals_pinyin.sh  extract_vocals.sh  transcribe.sh
asr/scripts/: align.py  align_chunked.py  align_chunked_pinyin.py  align_pinyin.py  extract_text.py  extract_vocals.py  to_srt.py  transcribe.py
configs/: default.yaml
data/: xunmeng_libretto.txt
notebooks/: exploration.ipynb  exploration_hip.ipynb
qiangge-annotation/: README.md
qiangge-annotation/tone-yinyang/: .env.example  .gitignore  README.md  pyproject.toml
qiangge-annotation/tone-yinyang/data/examples/: xunmeng-tone-draft.annotation.json  xunmeng-tone-review.example.json
qiangge-annotation/tone-yinyang/references/: yxlz_reference.example.json
qiangge-annotation/tone-yinyang/src/yxlz_tone_annotator/: __init__.py  cli.py  deepseek.py  pipeline.py  prompts.py
qiangge-annotation/tone-yinyang/tests/: test_pipeline.py
reports/: xunmeng_analysis.md  xunmeng_slides.html
src/: align_signals.py  compute_motion.py  detect_cuts.py  extract_audio.py  extract_poses.py  run_all.py  utils.py  visualize.py
statistic-multimodal-analysis/: .gitignore  CLAUDE.md  kunqu-pipeline-plan.md
videocr/: .gitignore  README.md  docker-compose.yml  eval_phrase_alignment.py  requirements.txt  (+7 more)
(+42 files in other folders)
